adding user API
